# embedded

./: .gitignore  README.md
bt-pwm-led/: CMakeLists.txt  btstack_config.h  main.c  notify.gatt
led-bar/: CMakeLists.txt  main.c
led-flash-pwm/: CMakeLists.txt  main.c
morse-printer/: CMakeLists.txt  main.c
